--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -127,6 +127,7 @@
 	"picture_no" : "Veuillez sélectionner une image",
 	"alias_too_long" : "Alias trop long !" ,
 	"torn_faield" : "Échec de la création du tournoi",
+	"torn_invalid_name" : "Nom de tournoi invalide",
 	"torn_name" : "Veuillez entrer un nom de tournoi",
 	"torn_pass" : "Veuillez entrer un mot de passe pour le tournoi privé",
 	"user_NOT_FOUND" : "Cet utilisateur n'éxiste pas" ,
