alias trkl pour les attaques xss

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -125,7 +125,8 @@
 	"failed_id": "Failed to load player ids",
 	"pass_match": "Password does not match.",
 	"picture_no": "Please select a picture",
-	"alias_too_long": "Alias too long !",
+	"alias_too_long": "Alias too long",
+	"invalid_alias": "Invalid alias",
 	"torn_faield": "Failed to create tournament",
 	"torn_invalid_name" : "Invalid tournament name",
 	"torn_name": "Please enter a tournament name",
