--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -125,7 +125,8 @@
 	"failed_id": "Error al cargar las identificaciones de los reproductores",
 	"pass_match": "La contraseña no coincide.",
 	"picture_no": "Seleccione una imagen",
-	"alias_too_long": "¡ Alias muy largo !",
+	"alias_too_long": "Alias muy largo",
+	"invalid_alias": "Alias no valido",
 	"torn_faield": "No se pudo crear el torneo",
 	"torn_invalid_name" : "Nombre de torneo no valido",
 	"torn_name": "Por favor, introduzca el nombre del torneo",
