--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -125,7 +125,8 @@
 	"failed_id" : "Échec du chargement des identifiants du joueur",
 	"pass_match" : "Le mot de passe ne correspond pas.",
 	"picture_no" : "Veuillez sélectionner une image",
-	"alias_too_long" : "Alias trop long !" ,
+	"alias_too_long" : "Alias trop long" ,
+	"invalid_alias" : "Alias invalide",
 	"torn_faield" : "Échec de la création du tournoi",
 	"torn_invalid_name" : "Nom de tournoi invalide",
 	"torn_name" : "Veuillez entrer un nom de tournoi",
